--- a/gays/index.html
+++ b/gays/index.html
@@ -11,6 +11,10 @@
 			alert("No Gays Allowed.");
 			console.log("what the dog doin");
 		</script>
+		<?php
+			echo "poo
+						newline poo"
+			?>
 	</body>
 </html>
 
