--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <title>Gay</title>
   </head>
   <body>
-		<style> h1{font-size:200px}
-		</style>
-		<h1>You Are Gay.</h1>
-		<script>
-			alert("No Gays Allowed.");
-			console.log("what the dog doin");
-		</script>
-	</body>
+    <style>
+      h1 {
+        font-size: 200px;
+      }
+    </style>
+    <h1>You Are Gay.</h1>
+    <script>
+      alert("No Gays Allowed.");
+      console.log("what the dsddddog doin");
+    </script>
+  </body>
 </html>
-
