--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
       }
     </style>
     <h1>You Are Gay.</h1>
-    <script>
-      alert("No Gays Allowed.");
-      console.log("what the dsddddog doin");
-    </script>
+    <h1>stfu sir</h1>
   </body>
 </html>
